--- a/adnu_lib/adnu_lib/package.json
+++ b/adnu_lib/adnu_lib/package.json
@@ -14,8 +14,8 @@
     "core-js": "^3.8.3",
     "jquery": "^3.6.3",
     "parse": "^4.0.0",
-    "v-calendar": "^2.4.1",
     "vue": "^3.2.13",
+    "vue-cal": "^4.8.1",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-router": "^4.1.3",
     "vue3-google-oauth2": "^1.0.6"
