--- a/adnu_lib/adnu_lib/package.json
+++ b/adnu_lib/adnu_lib/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
     "jquery": "^3.6.3",
     "parse": "^4.0.0",
     "v-calendar": "^2.4.1",
