--- a/adnu_lib/adnu_lib/package.json
+++ b/adnu_lib/adnu_lib/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@syncfusion/ej2-vue-schedule": "^20.4.44",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
