--- a/adnu_lib/adnu_lib/package.json
+++ b/adnu_lib/adnu_lib/package.json
@@ -17,6 +17,7 @@
     "parse": "^4.0.0",
     "vue": "^3.2.13",
     "vue-cal": "^4.8.1",
+    "vue-carousel": "^0.18.0",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-router": "^4.1.3",
     "vue3-google-oauth2": "^1.0.6"
